src/lexer/snapshots/vfpl__lexer__test__all_keywords-50.snap
---
source: src/lexer/test.rs
expression: "lex(\"Have\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: Have,
        },
    ],
)
