src/lexer/snapshots/vfpl__lexer__test__all_keywords-53.snap
---
source: src/lexer/test.rs
expression: "lex(\"Than\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: Than,
        },
    ],
)
