src/lexer/snapshots/vfpl__lexer__test__all_keywords-55.snap
---
source: src/lexer/test.rs
expression: "lex(\"Or\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: Or,
        },
    ],
)
