src/lexer/snapshots/vfpl__lexer__test__all_keywords-56.snap
---
source: src/lexer/test.rs
expression: "lex(\"Repeat\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Repeat,
        },
    ],
)
