src/lexer/snapshots/vfpl__lexer__test__alphabetical_char_in_number.snap
---
source: src/lexer/test.rs
expression: "lex(\"12a\")"

---
Err(
    IntParseError(
        Span {
            start: 0,
            end: 2,
        },
    ),
)
