src/lexer/snapshots/vfpl__lexer__test__decimal.snap
---
source: src/lexer/test.rs
expression: "lex(\"13.35253\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 8,
            },
            kind: Float(
                13.35253,
            ),
        },
    ],
)
