src/lexer/snapshots/vfpl__lexer__test__decimal_with_alphabetical_char.snap
---
source: src/lexer/test.rs
expression: "lex(\"00001.as244\")"

---
Err(
    InvalidCharacter(
        Span {
            start: 6,
            end: 7,
        },
    ),
)
