src/lexer/snapshots/vfpl__lexer__test__decimal_with_leading_zeros.snap
---
source: src/lexer/test.rs
expression: "lex(\"000001.15\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Float(
                1.15,
            ),
        },
    ],
)
