src/lexer/snapshots/vfpl__lexer__test__leading_zeros.snap
---
source: src/lexer/test.rs
expression: "lex(\"000012\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Int(
                12,
            ),
        },
    ],
)
